--- a/reactdev-learn/src/index.css
+++ b/reactdev-learn/src/index.css
@@ -46,17 +46,14 @@ ul {
   padding-inline-start: 20px;
 }
 
-.card {
-  width: fit-content;
-  margin: 5px;
-  padding: 5px;
-  font-size: 20px;
-  text-align: center;
+.avatar { margin: 5px; border-radius: 50%; min-height: 70px; }
+.profile {
   border: 1px solid #aaa;
-  border-radius: 20px;
-  background: #fff;
+  border-radius: 6px;
+  margin-top: 20px;
+  padding: 10px;
 }
-.avatar {
-  margin: 20px;
-  border-radius: 50%;
-}
+h1, h2 { margin: 5px; }
+h1 { margin-bottom: 10px; }
+ul { padding: 0px 10px 0px 20px; }
+li { margin: 5px; }
